Fix dropdown guild selection logic in `MessagingService` by replacing `get(0)` with `getFirst()` for clarity and correctness.